Added menu button on all necessary pages

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,10 @@
+body {
+    text-align: center;
+}
+
 a:visited, a:link {
-        text-decoration: none;
-    }
+    text-decoration: none;
+}
 
 #center{
     text-align: center;
