--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
-        body{
-             text-align: center;
-        }
-</style>
 <head>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <meta charset="UTF-8">
     <title>ASK MATE by Marcin, Marcin, Basia & Tomek</title>
     <script src="https://code.jquery.com/jquery-3.6.2.min.js"></script>
-    <script src="/static/js/index.js"></script>
 </head>
     <body>
         <button id="menu-icon">Menu</button>
         <div class="menu"></div>
         <a href="/"><img src="/static/logo-small.png" alt="ask mate logo"></a><br><br>
-{#        {% if message %}#}
-{#        {{message}}<br>#}
-{#        <a href = "/user/{{ session['id'] }}">User profile</a>#}
-{#        <form action="/logout" id="logout">#}
-{#        <button type="submit">Logout</button>#}
-{#         </form>#}
-{#        <form action="/add_question" method="get" style="display: inline-block">#}
-{#        <button type="submit">Add new question</button>#}
-{#        <span style="margin-left: 50px"></span>#}
-{#        </form>#}
-{#        {% else %}#}
-{#        <form action="/login" id="login-page">#}
-{#        <button type="submit">Login</button>#}
-{#         </form>#}
-{#         <form action="/registration">#}
-{#             <button type="submit">Registration</button>#}
-{#         </form>#}
-{#        {% endif %}#}
         <form action="/list" style="display: inline-block">
             <label for="sort_by">Sort by:</label>
             <select name="sort_by" id="sort_by">
@@ -76,11 +52,6 @@
             <form action="/list" style="display: inline-block">
                 <button type="submit">All questions</button>
             </form>
-            {% if message %}
-            <form action="/users" style="display: inline-block">
-                <button type="submit">All users</button>
-            </form>
-            {% endif %}
             <span class="tab"></span>
             <form action="/tags" style="display: inline-block">
                 <button type="submit">Tags list</button>
@@ -90,29 +61,15 @@
             <br>
             <p>© 2022 Marcin, Marcin & Tomek</p>
         </footer>
-
     <script>
-        if ("{{message}}") {
-            let reputation = {{ reputation }}
-            $('.menu').append(`<p style="font-size: 20px">{{ message }}</p>`);
-            if (reputation < 100) {
-                $('.menu').append(`<img width="100px" height="100px" src="/static/avatar_lvl1.png"><br><br>`);
-            } else if (reputation >= 100 && reputation < 500) {
-                $('.menu').append(`<img width="100px" height="100px" src="/static/avatar_lvl2.png"><br><br>`);
-            } else if (reputation >= 500 && reputation < 1000) {
-                $('.menu').append(`<img width="100px" height="100px" src="/static/avatar_lvl3.png"><br><br>`);
-            } else if (reputation >= 1000 && reputation < 5000) {
-                $('.menu').append(`<img width="100px" height="100px" src="/static/avatar_lvl4.png"><br><br>`);
-            } else if (reputation >= 5000) {
-                $('.menu').append(`<img width="100px" height="100px" src="/static/avatar_lvl5.png"><br><br>`);
-            }
-            $('.menu').append(`<button class="menu-btn" onclick="location.href='/user/{{ session['id'] }}'">User profile</button>`);
-            $('.menu').append(`<button class="menu-btn" onclick="location.href='/add_question'">Add new question</button>`);
-            $('.menu').append(`<button class="menu-btn" onclick="location.href='/logout'">Logout</button>`);
-        } else {
-            $('.menu').append(`<button class="menu-btn" onclick="location.href='/login'">Login</button>`);
-            $('.menu').append(`<button class="menu-btn" onclick="location.href='/registration'">Registration</button>`);
+        let message = "{{ message }}";
+        let reputation = 0;
+        let user_id = "{{ session['id'] }}";
+
+        if ("{{ reputation }}") {
+            reputation = {{ reputation }} + 0;
         }
     </script>
+    <script src="/static/js/menu.js"></script>
     </body>
 </html>
