--- a/templates/search.html
+++ b/templates/search.html
@@ -1,34 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
-        body{
-             text-align: center;
-        }
-</style>
 <head>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="/static/style.css">
     <meta charset="UTF-8">
     <title>ASK MATE by Marcin, Marcin, Basia & Tomek</title>
+    <script src="https://code.jquery.com/jquery-3.6.2.min.js"></script>
 </head>
     <body>
+        <button id="menu-icon">Menu</button>
+        <div class="menu"></div>
         <a href="/"><img src="/static/logo-small.png" alt="ask mate logo"></a><br><br>
-        {% if login %}
-            <a href = "/user/{{ session['id'] }}">User profile</a>
-        <form action="/logout" id="logout">
-        <button type="submit">Logout</button>
-         </form>
-        <form action="/add_question" method="get" style="display: inline-block">
-            <button type="submit">Add new question</button>
-            <span style="margin-left: 50px"></span>
-        </form>
-        {% else %}
-            <form action="/login" id="login-page">
-        <button type="submit">Login</button>
-         </form>
-         <form action="/registration">
-             <button type="submit">Registration</button>
-         </form>
-        {% endif %}
         <form action="/list" style="display: inline-block">
             <label for="sort_by">Sort by:</label>
             <select name="sort_by" id="sort_by">
@@ -59,7 +40,6 @@
                 <th><b>Vote number</b></th>
             </tr>
             {% for title in titles %}
-
                 <td><a href="/question/{{title.id}}">{{title.title|safe}}</a></td>
                 <td>{{title.submission_time}}</td>
                 <td>{{title.view_number}}</td>
@@ -73,7 +53,6 @@
                     {% endif %}
                 {% endfor %}
                 </tr>
-
                 {% for answer in answers %}
                         {% if title.id == answer.question_id %}
                             <tr>
@@ -83,8 +62,6 @@
                             </tr>
                         {% endif %}
                 {% endfor %}
-
-
             {% endfor %}
             </table><br>
         <div>
@@ -100,5 +77,15 @@
             <br>
             <p>© 2022 Marcin, Marcin & Tomek</p>
         </footer>
+        <script>
+        let message = "{{ message }}";
+        let reputation = 0;
+        let user_id = "{{ session['id'] }}";
+
+        if ("{{ reputation }}") {
+            reputation = {{ reputation }} + 0;
+        }
+        </script>
+        <script src="/static/js/menu.js"></script>
     </body>
 </html>
