--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/static/style.css">
     <meta charset="UTF-8">
-    <title>Login form</title>
+    <title>Login page</title>
 </head>
 <body>
+    <div id="image">
+        <a href="/"><img src="/static/logo-small.png" alt="ask mate logo"></a><br>
+    </div>
+    <h1>Login page</h1>
     <form action='/login_attempt' method="post">
-        {% if message %}
-        {{message}}<br>
-        {% endif %}
         <label for="username">Username: </label>
-        <input type="text" name="username" id="username" required>
+        <input type="text" name="username" id="username" required><br><br>
         <label for="password">Password: </label>
-        <input type="password" name="password" id="password" required>
-        <input type="submit" value="login">
+        <input type="password" name="password" id="password" required><br><br>
+        <button type="submit">Login</button>
     </form>
+    <br><br>
+    <form action="/">
+        <button type="submit">Back to main page</button>
+    </form>
+    <script>
+        if ("{{ message }}") {
+            alert("{{ message }}")
+        }
+    </script>
 </body>
 </html>
