--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/static/style.css">
     <meta charset="UTF-8">
-    <title>Registration</title>
+    <title>Registration page</title>
 </head>
 <body>
+    <div id="image">
+        <a href="/"><img src="/static/logo-small.png" alt="ask mate logo"></a><br>
+    </div>
+    <h1>Registration page</h1>
     <div>
         <form action="/registration" method="post">
             <label>User name:
@@ -26,10 +31,10 @@
     <form action="/">
         <button type="submit">Back to main page</button>
     </form>
-<script>
-    if ("{{ message }}") {
-        alert("{{ message }}");
-    }
-</script>
+    <script>
+        if ("{{ message }}") {
+            alert("{{ message }}")
+        }
+    </script>
 </body>
 </html>
