--- a/templates/users_list.html
+++ b/templates/users_list.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
+        th, tr, td {
+            text-align: center;
+            border: 1px solid black;
+        }
         th {
-             text-align: center;
+            padding: 10px;
+        }
+        table {
+            font-size: 20px;
         }
 </style>
 <head>
